<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.doblon8</groupId>
    <artifactId>jzbar</artifactId>
    <version>0.0.1</version>
    <packaging>jar</packaging>

    <name>jzbar</name>
    <description>Java Foreign Function and Memory bindings for ZBar</description>
    <url>https://github.com/doblon8/jzbar</url>

    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>doblon8</name>
            <email>doblon8@proton.me</email>
            <url>https://github.com/doblon8</url>
        </developer>
    </developers>

    <scm>
        <url>https://github.com/doblon8/jzbar/tree/main</url>
        <connection>scm:git:git://github.com/doblon8/jzbar.git</connection>
        <developerConnection>scm:git:ssh://git@github.com:doblon8/jzbar.git</developerConnection>
        <tag>v0.0.1</tag>
    </scm>

    <properties>
        <maven.compiler.source>22</maven.compiler.source>
        <maven.compiler.target>22</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <dependencies>
        <dependency>
            <groupId>com.google.zxing</groupId>
            <artifactId>core</artifactId>
            <version>3.5.3</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.13.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.3</version>
                <configuration>
                    <argLine>--enable-native-access=io.github.doblon8.jzbar</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
